# Stock-Trend-Prediciton

./: .gitignore  Dockerfile  README.md  price_alphavantage(Nariman's_EDA).ipynb  pyproject.toml
Documents/Phase 0/: ML_Project_Phase_0_Dataset_Identification_Q_and_Friends.docx
Documents/Phase 1/: Q_and_Friends_ML_Project_Proposal_Report.docx
TrainingCode/: cnn_lgst.ipynb  windowML.ipynb
notebooks/phase1/: technical.ipynb  test_gpu_talib.ipynb  test_merge_data.ipynb
notebooks/phase1/data/MT5/: BTCUSD_H1_202112310000_202506302300.csv  XAUUSD_H1_202112310100_202506302300.csv  eda.ipynb
notebooks/phase1/data/alphavantage/: crypto_alphavantage.ipynb  insiders_alphavantage.ipynb  news_alphavantage.ipynb  price_alphavantage.ipynb
notebooks/phase1/data/alphavantage/insiders/: NVDA_insider_transactions_2020_2025.parquet
notebooks/phase1/data/unused/fred/: fred.ipynb  fred_daily_features.csv
notebooks/phase1/data/unused/fundamentals/: fundamentals.ipynb  nvda_earnings_dates.csv  nvda_quarterly_balance_sheet.csv  nvda_quarterly_financials.csv
notebooks/phase1/data/unused/gdelt/: GDELT Events from BigQuery with Sentiment Score and News URL.csv  sentiment_gdelt.ipynb
notebooks/phase1/data/unused/google_trends/: all_batches_merged_normalized.csv  batch1_finance_trends.csv  batch2_company_trends.csv  pytrends.ipynb
notebooks/phase1/data/unused/sec_filing/: nvda_form4_secapi_20240101_20250630.csv  nvda_form4_transactions_parsed.csv  sec-filing-form4.ipynb
notebooks/phase1/data/unused/yfinance/: btc_usd_daily.parquet  crude_oil_wti_futures_daily.parquet  gold_futures_daily.parquet  other_assets.ipynb
notebooks/phase2/: corr.ipynb  finalize_data.ipynb
notebooks/phase2/data/stock_prices/1h/: AMD_UTC.csv  DIA_UTC.csv  IWM_UTC.csv  (+4 more)
notebooks/phase3/: README.md  accuracy_analysis.ipynb  cnn_lgst.ipynb  final_experiment.ipynb  main.py  model_size_analysis.ipynb  price_feature_analysis.ipynb  pyproject.toml  show_flatten_column.ipynb  something.txt  technical_feature_analysis.ipynb
notebooks/phase3/utils/: dataset.py
(+195 files in other folders)
