[project]
name = "at82-03-stock-trend-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finnhub-python>=2.4.25",
    "fredapi>=0.5.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "pytrends>=4.9.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sec-api>=1.0.32",
    "ta-lib>=0.6.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
