[project]
name = "at82-03-stock-trend-predictor-phase3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "ta-lib>=0.6.8",
    "torch>=2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
